--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>World News</title>
 </head>
 <body>
-    
+    <h1>World News</h1>
+    <div id="categories-div">
+        <select name="categories" id="categories-select">
+            <option >Select a Category</option>
+            <option value="technology">Technology</option>
+            <option value="lifestyle">Lifestyle</option>
+            <option value="business">Business</option>
+            <option value="general">General</option>
+            <option value="programming">Programming</option>
+            <option value="science">Science</option>
+            <option value="entertainment">Entertainment</option>
+            <option value="sports">Sports</option>
+            <option value="finance">Finance</option>
+            <option value="academia">Academia</option>
+            <option value="politics">Politics</option>
+            <option value="health">Health</option>
+            <option value="opinion">Opinion</option>
+            <option value="food">Game</option>
+        </select>
+        <button id="display-button">Display News</button>
+    </div>
+    <div id="input-div">
+        <select name="languages" id="languages-select">
+            <option >Select a Language</option>
+            <option value="en">English</option>
+            <option value="ar">Arabic</option>
+            <option value="zh">Chinese</option>
+            <option value="fr">French</option>
+            <option value="de">German</option>
+            <option value="hi">Hindi</option>
+            <option value="es">Spanish</option>
+            <option value="it">Italian</option>
+        </select>
+        <input type="text" name="search-field" id="search-field" placeholder="Search for news">
+    </div>
+    <div id="news-container">
+    </div>
+
+      
 </body>
 <script src="/public/js/dom.js"></script>
 </html>
