creating basic routes

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,12 @@
             <option value="it">Italian</option>
         </select>
         <input type="text" name="search-field" id="search-field" placeholder="Search for news">
+        <button id="search-btn">Search</button>
     </div>
     <div id="news-container">
     </div>
 
       
 </body>
-<script src="/public/js/dom.js"></script>
+<script src='/js/dom.js'></script>
 </html>
