--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             <option value="politics">Politics</option>
             <option value="health">Health</option>
             <option value="opinion">Opinion</option>
-            <option value="food">Game</option>
+            <option value="Game">Game</option>
         </select>
         <button id="display-button">Display News</button>
     </div>
